Dockerize application and add tests